<resources>
    <string name="app_name">Journal App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">User Image</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="note_header">Note Header</string>
    <string name="note_content">Note Content</string>
    <string name="sign_out">Sign Out</string>
    <string name="home_title">My Journal</string>
    <string name="google_sign_in_btn_text">Sign In With Google</string>
    <string name="share_note">Share Note</string>
    <string name="favourite_note">Favourite Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_date">2018–07–01</string>
    <string name="delete_note">Delete Note</string>
    <string name="save_note">Save</string>
    <string name="no_notes">You have no notes…</string>
    <string name="delete">Delete</string>
    <string name="action_search">Search</string>

    <string name="search_hint">Title or content…</string>
    <string name="nav_my_notes">My Notes</string>
    <string name="nav_user_title">User</string>
    <string name="action_delete">Delete</string>
    <string name="no_trashed_notes">You have no trashed notes…</string>
    <string name="nav_trash">Trash</string>
    <string name="action_view">View</string>
    <string name="restore">Restore</string>
    <string name="delete_icon">Delete Icon</string>
</resources>
